# sandbox

./: .gitignore  README.md
android/JNIExample/: .cproject  .project
android/RecoverMe/: .project  AndroidManifest.xml
assembly/64bit_hello_world_asm/: hello.S
assembly/assembly_putchar/: sandbox.asm  sandbox.c  sandbox_c.asm
assembly/eatmacro/: Makefile  eatmacro.asm
assembly/eatterm/: Makefile  eatterm.asm
assembly/movsb/: Makefile  movsb.asm
assembly/newlines/: Makefile  newlines.asm
assembly/start_of_bootloader/: Makefile  putstring.s
assembly/table_lookup/: Makefile  table_lookup.asm
assembly/vidbuff1/: Makefile  vidbuff1.asm
bash/: modify_afs_rpm.sh
build-data_types-Desktop-Debug/: Makefile  data_types
c/: .ycm_extra_conf.py
c#/a_star_xna/: Computer Science 565 Project 2 Final Documentation.docx  sk565v3.sln
c++/assembly/: assembly-linux.asm  assembly.asm  assembly.cpp
c++/atomics/: atomics.h
c++/concurrency/: Makefile.am  configure.ac  declspec.h  stdafx.h  system.vcxproj  targetver.h
c++/concurrency/exceptions/: concurrency_exception.cpp  concurrency_exception.h
c++/concurrency/mutex/: mutex.h
c++/concurrency/mutex/posix/: mutex.cpp
c++/concurrency/mutex/win32/: mutex.cpp
c++/concurrency/tests/exceptions/: Makefile  Makefile.am  concurrency_exception.h  concurrency_exception.vcxproj  configure.ac
c++/concurrency/tests/mutex/: Makefile  Makefile.am  concurrency_mutex.vcxproj  configure.ac  mutex.h
c++/concurrency/utils/: non_copyable.h
c++/data_structures/: ConcurrentQueue.h
c++/error_handling/: simple.cpp
c++/function_pointers/: fp.cpp
c++/garbage_collection/: garbage.cpp
c++/graphics/gtkmm-zoom/: config.h  configure.in  remove.sh  setup.sh
c++/graphics/gtkmm-zoom/include/: drawingarea.h  examplewindow.h  pngfilereader.h
c++/graphics/gtkmm-zoom/src/: Makefile  Makefile.am  drawingarea.cpp  examplewindow.cpp  main.cpp  pngfilereader.cpp
c++/project_euler/: euler_math.cpp  euler_math.h  main.cpp  project_euler.pro
c++/regex/: regex_tut.cpp
c++/smart_ptrs/: platform.h
c++/smart_ptrs/tests/: Makefile  Makefile.am  configure.ac  smart_ptrs.h  smart_ptrs.vcxproj
c++/template_containers/: Contain.mak  Driver.cpp  TemplateContainers.h
c++/time/: ratio.h  rational.h  rational.inl  utils.h
c++/unique_trees_given_height/: BST.h  BST_Store.h  Makefile.mak  main.cpp
c++11/concurrency/: Makefile  main.cpp  non_copyable_movable.h  semaphore.cpp  semaphore.h
c++11/utility/: Makefile  declspec.h  interval.cpp  interval.h  main.cpp
c/bit_flipping/: bit_operators.c  bit_twiddle.c
c/calc_speed_up/: asmt1_hoggan.c
c/conversion/: Makefile  itoa.c  main.c  reverse.c
c/copy_with_permission_check/: FileCopy.c
c/curl_header_download/: README.txt  lib_curl.c
c/data_structures/trees/binary_balanced/: Makefile.am  configure.ac
c/data_structures/trees/binary_balanced/src/: Makefile.am  rb_tree.c  rb_tree.h
c/data_structures/trees/binary_balanced/tests/: Makefile.am  check_binary_balanced  check_rb_tree.c
c/decimal_to_fp_conversion/: asmt2_hoggan.c
c/dinning_philosophers/: Pipes_As_Semaphores.c
c/direct_mapped_cache_to_memory/: asmt_3.c
c/dx9_device_basic/: CreateDevice.cpp  CreateDevice.rc  DXMakefile.mak
c/dx9_triangle_vertices/: DXMakefile.mak  Vertices.cpp  Vertices.rc
c/failed_shared_memory/: shared_memory_malloc.c
c/ipc/: .gitignore  Makefile  Makefile.am  Makefile.in  aout  autotools_gen.sh  config.h  config.status  configure  configure.ac  main.c
c/jpeg_to_raw/: Makefile  jpeg_to_raw.c  process_data.c
c/map_virtual_to_physical_address_page_tables/: asmt4_hoggan.c
c/matrix_chain/: Makefile  main.c  matrix.c  matrix.h  matrix_list.c  matrix_list.h
c/optimal_instruction_order/: asmt5_hoggan.c
c/permissions_of_file/: prgm4.c  prgm4_2ed.c  prgm4_copied.c
c/permutations_analysis/: Permutations Analysis.docx  README.txt  internet_permutations.c  my_malloc_permutation_attempt.c
c/pipes_forks_on_wordcount/: prgm6.c  prgm6.h  prgm6_2.c  prgm6_2.h  wc_special.c
c/power_set/: counter.c  power_set.c
c/print_line_numbers/: prgm2.c
c/recurse_directories/: descend_directories_recursive.c
c/recurse_directories_ftw/: prgm5.c
c/semaphore_binary_and_counting/: Binary_Counting_Semaphore.c
c/unix_system_programming/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  libtool  setup.sh
c/unix_system_programming/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
c/unix_system_programming/src/: Makefile  Makefile.am  Makefile.in
c/unix_system_programming/src/apps/: Makefile.am  bare_bones_shell.c  bare_bones_shell_signal_handleing.c  create_file_with_holes.c  file_type_on_commandline.c  ls-simple.c  pathconf_sysconf_values.c  print_uid_gid.c  see_if_stdin_seekable.c  stdout_to_stdin.c  stdout_to_stdin_stdlib.c
c/unix_system_programming/src/include/: apue.h
c/unix_system_programming/src/libs/: Makefile  Makefile.am  Makefile.in  error.c  error_daemon.c  libapue-1.0.la  libapue_1_0_la-error.lo  libapue_1_0_la-error_daemon.lo  libapue_1_0_la-max_number_of_open_files.lo  libapue_1_0_la-path_length_allocator.lo  libapue_1_0_la-set_clear_file_status_flags.lo  max_number_of_open_files.c  path_length_allocator.c  set_clear_file_status_flags.c
c/unix_system_programming/src/libs/.deps/: libapue_1_0_a-error.Po  libapue_1_0_a-error_daemon.Po  libapue_1_0_a-max_number_of_open_files.Po  libapue_1_0_a-path_length_allocator.Po  libapue_1_0_a-set_clear_file_status_flags.Po  libapue_1_0_la-error.Plo  libapue_1_0_la-error_daemon.Plo  libapue_1_0_la-max_number_of_open_files.Plo  libapue_1_0_la-path_length_allocator.Plo  libapue_1_0_la-set_clear_file_status_flags.Plo
c/unix_system_programming/src/libs/.libs/: libapue-1.0.la  libapue-1.0.lai  libapue-1.0.so.0.0.0
c/unix_system_programming/src/scripts/: build_awk_script.sh  pathconf_sysconf_values.awk
c/win32_pong/: README.txt  (+4 more)
data_types/: Makefile  Makefile.bu  a.out  data_types  data_types.pro  glext.h  main.cpp
rpms/: cronjob_ldap.sh  rapsde-ldap-config.spec
(+1242 files in other folders)
