#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.66])
AC_INIT([sampleapplication], [0.1], [mehoggan@gmail.com])
AM_INIT_AUTOMAKE([sampleapplication], [0.1])
AC_CONFIG_SRCDIR([src/])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
dnl AC_DEFINE(GTKMM)
PKG_CHECK_MODULES([GTKMM], [gtkmm-3.0 >= 2.90.5])
PKG_CHECK_MODULES([libpng], [libpng12])
CFLAGS="$GTKMM_CFLAGS $CFLAGS"

# Checks for debug
AC_ARG_ENABLE(debug,
AS_HELP_STRING([--enable-debug],
               [enable debugging, default: no]),
[case "${enableval}" in
             yes) debug=true ;;
             no)  debug=false ;;
             *)   AC_MSG_ERROR([bad value ${enableval} for --enable-debug]) ;;
esac],
[debug=false])
AM_CONDITIONAL(DEBUG, test x"$debug" = x"true")

# Checks for header files.
AC_CHECK_HEADERS([iostream])
AC_CHECK_HEADERS([memory])
AC_CHECK_HEADERS([vector])
AC_CHECK_HEADERS([gtkmm.h])
AC_CHECK_HEADERS([png.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
