bare_bones_shell_PROGRAMS = bare_bones_shell                   
create_file_with_wholes_PROGRAMS = create_file_with_holes   
ls_simple_PROGRAMS = ls-simple  
print_uid_gid_PROGRAMS = print_uid_gid
std_erro_exmp_PROGRAMS = std_erro_exmp    
stdout_tostdin_stdlib_PROGRAMS = stdout_to_stdin_stdlib
bare_bones_shell_signal_handleing_PROGRAMS = bare_bones_shell_signal_handleing 
file_type_on_commandline_PROGRAMS = file_type_on_commandline
see_if_stdin_seekable_PROGRAMS = see_if_stdin_seekable  
stdout_to_stdin_PROGRAMS = stdout_to_stdin

# List your sources
xbare_bones_shell_SOURCES = bare_bones_shell.c
create_file_with_wholes_SOURCES = create_file_with_holes.c
ls_simple_SOURCES = ls-simple.c
print_uid_gid_SOURCES = print_uid_gid.c
std_erro_exmp_SOURCES = std_erro_exmp.c        
stdout_tostdin_stdlib_SOURCES = stdout_to_stdin_stdlib.c
bare_bones_shell_signal_handleing_SOURCES = bare_bones_shell_signal_handleing.c
file_type_on_commandline_SOURCES = file_type_on_commandline.c
see_if_stdin_seekable_SOURCES = see_if_stdin_seekable.c
stdout_to_stdin_SOURCES = stdout_to_stdin.c

AM_CXXFLAGS = 
AM_CPPFLAGS = -I$(top_srcdir)/include
